fixed DTO Mapper issue